--- a/src/styles/dark/css-vars.css
+++ b/src/styles/dark/css-vars.css
@@ -1,6 +1,7 @@
 html {
 	--menu-hover-bg: #f0f0f0;
 	--menu-active-bg: #dee7ef;
+	--track-toolbar-bg: #f4f4f5;
 }
 
 html.dark {
@@ -10,6 +11,7 @@ html.dark {
 	--el-text-color-primary: #c6c6ca;
 	--menu-hover-bg: #2E2E35;
 	--menu-active-bg: #060608;
+	--track-toolbar-bg: #29292D;
 }
 
 html.dark .el-input {
