更新:作业进度查看结果直接打开视频 新增:视频合成支持多图层

--- a/src/styles/dark/css-vars.css
+++ b/src/styles/dark/css-vars.css
@@ -45,3 +45,21 @@ html.dark .el-input {
 html.dark .plyr--audio .plyr__controls {
 	background-color: var(--layer-bg-dark);
 }
+
+::-webkit-scrollbar {
+	width: 6px;
+}
+
+.dark ::-webkit-scrollbar-thumb {
+	background-color: #fff3;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #0003;
+	border-radius: 10px;
+	transition: all .2s ease-in-out;
+}
+
+::-webkit-scrollbar-track {
+	border-radius: 10px;
+}
